Few improvements to training notebook

--- a/model/training.ipynb
+++ b/model/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,12 +16,14 @@
     "import torch.optim as optim\n",
     "import time\n",
     "import torchvision.transforms as transforms\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +57,7 @@
        "(195, 49)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -194,14 +196,15 @@
     "model = model.to(DEVICE)\n",
     "\n",
     "# init lazy modules\n",
-    "model(torch.zeros(1, 6, 1000).to(DEVICE))\n",
+    "input_example = dataset[0][0].unsqueeze(0)\n",
+    "model(input_example.to(DEVICE))\n",
     "\n",
     "print(\"Number of params:\", sum(p.numel() for p in model.parameters()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,20 +214,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📍 Epoch: 000 | Train: 1.2753 (44.6154%) | Test: 1.0891 (93.8776%) | Time: 2.1677s\n",
-      "📍 Epoch: 001 | Train: 0.7981 (91.7949%) | Test: 0.6772 (95.9184%) | Time: 2.0512s\n",
-      "📍 Epoch: 002 | Train: 0.3906 (94.3590%) | Test: 0.3584 (93.8776%) | Time: 2.0408s\n",
-      "📍 Epoch: 003 | Train: 0.1856 (95.3846%) | Test: 0.1642 (95.9184%) | Time: 2.0975s\n",
-      "📍 Epoch: 004 | Train: 0.0879 (97.4359%) | Test: 0.0908 (100.0000%) | Time: 2.1850s\n",
-      "📍 Epoch: 005 | Train: 0.0478 (98.9744%) | Test: 0.0553 (100.0000%) | Time: 2.0580s\n",
-      "📍 Epoch: 006 | Train: 0.0304 (98.9744%) | Test: 0.0535 (97.9592%) | Time: 2.1093s\n"
+      "📍 Epoch: 000 | Train: 1.1335 (63.5897%) | Test: 0.8057 (95.9184%) | Time: 3.2808s\n",
+      "📍 Epoch: 001 | Train: 0.4324 (91.2821%) | Test: 0.2990 (91.8367%) | Time: 2.5055s\n",
+      "📍 Epoch: 002 | Train: 0.1447 (96.9231%) | Test: 0.0913 (100.0000%) | Time: 2.2347s\n",
+      "📍 Epoch: 003 | Train: 0.0744 (98.9744%) | Test: 0.0396 (100.0000%) | Time: 2.2144s\n",
+      "📍 Epoch: 004 | Train: 0.0537 (98.9744%) | Test: 0.0207 (100.0000%) | Time: 2.0350s\n"
      ]
     },
     {
@@ -234,7 +235,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/francescore/Documents/GitHub/EmbeddedEdgeAI/model/training.ipynb Cell 12\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/francescore/Documents/GitHub/EmbeddedEdgeAI/model/training.ipynb#X14sZmlsZQ%3D%3D?line=55'>56</a>\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mno_grad():\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/francescore/Documents/GitHub/EmbeddedEdgeAI/model/training.ipynb#X14sZmlsZQ%3D%3D?line=56'>57</a>\u001b[0m \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/francescore/Documents/GitHub/EmbeddedEdgeAI/model/training.ipynb#X14sZmlsZQ%3D%3D?line=57'>58</a>\u001b[0m     \u001b[39m# Set to evaluation mode\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/francescore/Documents/GitHub/EmbeddedEdgeAI/model/training.ipynb#X14sZmlsZQ%3D%3D?line=58'>59</a>\u001b[0m     model\u001b[39m.\u001b[39meval()\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/francescore/Documents/GitHub/EmbeddedEdgeAI/model/training.ipynb#X14sZmlsZQ%3D%3D?line=60'>61</a>\u001b[0m     \u001b[39mfor\u001b[39;00m j, (inputs, labels) \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(valid_data_loader):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/francescore/Documents/GitHub/EmbeddedEdgeAI/model/training.ipynb#X14sZmlsZQ%3D%3D?line=61'>62</a>\u001b[0m         inputs \u001b[39m=\u001b[39m inputs\u001b[39m.\u001b[39mto(DEVICE)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/francescore/Documents/GitHub/EmbeddedEdgeAI/model/training.ipynb#X14sZmlsZQ%3D%3D?line=62'>63</a>\u001b[0m         labels \u001b[39m=\u001b[39m labels\u001b[39m.\u001b[39mto(DEVICE)\n",
+      "\u001b[1;32m/Users/francescore/Documents/GitHub/EmbeddedEdgeAI/model/training.ipynb Cell 12\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/francescore/Documents/GitHub/EmbeddedEdgeAI/model/training.ipynb#X14sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m valid_loss \u001b[39m=\u001b[39m \u001b[39m0.0\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/francescore/Documents/GitHub/EmbeddedEdgeAI/model/training.ipynb#X14sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m valid_acc \u001b[39m=\u001b[39m \u001b[39m0.0\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/francescore/Documents/GitHub/EmbeddedEdgeAI/model/training.ipynb#X14sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m \u001b[39mfor\u001b[39;00m i, (inputs, labels) \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(train_data_loader):\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/francescore/Documents/GitHub/EmbeddedEdgeAI/model/training.ipynb#X14sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m     inputs \u001b[39m=\u001b[39m inputs\u001b[39m.\u001b[39mto(DEVICE)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/francescore/Documents/GitHub/EmbeddedEdgeAI/model/training.ipynb#X14sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m     labels \u001b[39m=\u001b[39m labels\u001b[39m.\u001b[39mto(DEVICE)\n",
       "File \u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/torch/utils/data/dataloader.py:628\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    625\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_sampler_iter \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    626\u001b[0m     \u001b[39m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;00m\n\u001b[1;32m    627\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reset()  \u001b[39m# type: ignore[call-arg]\u001b[39;00m\n\u001b[0;32m--> 628\u001b[0m data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_next_data()\n\u001b[1;32m    629\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m    630\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_dataset_kind \u001b[39m==\u001b[39m _DatasetKind\u001b[39m.\u001b[39mIterable \u001b[39mand\u001b[39;00m \\\n\u001b[1;32m    631\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \\\n\u001b[1;32m    632\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_num_yielded \u001b[39m>\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_IterableDataset_len_called:\n",
       "File \u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/torch/utils/data/dataloader.py:1316\u001b[0m, in \u001b[0;36m_MultiProcessingDataLoaderIter._next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1313\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_process_data(data)\n\u001b[1;32m   1315\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_shutdown \u001b[39mand\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_tasks_outstanding \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m-> 1316\u001b[0m idx, data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_get_data()\n\u001b[1;32m   1317\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_tasks_outstanding \u001b[39m-\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m   1318\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_dataset_kind \u001b[39m==\u001b[39m _DatasetKind\u001b[39m.\u001b[39mIterable:\n\u001b[1;32m   1319\u001b[0m     \u001b[39m# Check for _IterableDatasetStopIteration\u001b[39;00m\n",
       "File \u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/torch/utils/data/dataloader.py:1282\u001b[0m, in \u001b[0;36m_MultiProcessingDataLoaderIter._get_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1278\u001b[0m     \u001b[39m# In this case, `self._data_queue` is a `queue.Queue`,. But we don't\u001b[39;00m\n\u001b[1;32m   1279\u001b[0m     \u001b[39m# need to call `.task_done()` because we don't use `.join()`.\u001b[39;00m\n\u001b[1;32m   1280\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   1281\u001b[0m     \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[0;32m-> 1282\u001b[0m         success, data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_try_get_data()\n\u001b[1;32m   1283\u001b[0m         \u001b[39mif\u001b[39;00m success:\n\u001b[1;32m   1284\u001b[0m             \u001b[39mreturn\u001b[39;00m data\n",
