--- a/model/training.ipynb
+++ b/model/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "import time\n",
     "import torchvision.transforms as transforms\n",
     "from pathlib import Path\n",
+    "from fvcore.nn import FlopCountAnalysis\n",
     "import warnings\n",
     "import torch.multiprocessing\n",
     "\n",
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,16 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_transform = None #transforms.Normalize(...)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +60,7 @@
        "(195, 49)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,24 +183,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = IMUModelSmall()\n",
+    "model = model.to(DEVICE)\n",
+    "\n",
+    "# init lazy modules\n",
+    "input_example = dataset[0][0].unsqueeze(0).to(DEVICE)\n",
+    "model(input_example)\n",
+    "\n",
+    "# print model stats\n",
+    "flops = FlopCountAnalysis(model, input_example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "FLOPS: 79320\n",
       "Number of params: 12850\n"
      ]
     }
    ],
    "source": [
-    "model = IMUModelSmall()\n",
-    "model = model.to(DEVICE)\n",
-    "\n",
-    "# init lazy modules\n",
-    "input_example = dataset[0][0].unsqueeze(0)\n",
-    "model(input_example.to(DEVICE))\n",
+    "# print model stats\n",
+    "print(f\"FLOPS: {flops.total()}\")\n",
     "\n",
     "print(\"Number of params:\", sum(p.numel() for p in model.parameters()))"
    ]
