Fix predict method

--- a/model/training.ipynb
+++ b/model/training.ipynb
@@ -106,7 +106,7 @@
     "        start_time = time.time()\n",
     "        output = model(tensor)\n",
     "\n",
-    "        prob, idx = torch.max(ps, 1) # dim 0 is batch, dim 1 is probability distribution\n",
+    "        prob, idx = torch.max(output, 1) # dim 0 is batch, dim 1 is probability distribution\n",
     "        \n",
     "        idx = idx[0].item() # item 0 of the batch\n",
     "        prob = prob[0].item() # item 0 of the batch\n",
