--- a/model/tf_quantization.ipynb
+++ b/model/tf_quantization.ipynb
@@ -2,60 +2,96 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import pathlib\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import onnx\n",
+    "from onnx_tf.backend import prepare"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "repr_data = np.load(\"/Users/francescore/Desktop/representative_data.npy\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-06 16:18:08.483606: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:364] Ignored output_format.\n",
-      "2023-05-06 16:18:08.483620: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:367] Ignored drop_control_dependency.\n",
-      "fully_quantize: 0, inference_type: 6, input_inference_type: FLOAT32, output_inference_type: FLOAT32\n"
+      "WARNING:absl:Found untraced functions such as gen_tensor_dict while saving (showing 1 of 1). These functions will not be directly callable after loading.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: tf_model/assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: tf_model/assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "onnx_model = onnx.load(\"model_v10/model_v10.onnx\")  # load onnx model\n",
+    "tf_rep = prepare(onnx_model)  # prepare tf representation\n",
+    "tf_rep.export_graph(\"tf_model\")  # export the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "repr_data = np.load(\"/Users/francescore/Desktop/HAEEA/representative_data.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-08 12:15:43.304454: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:364] Ignored output_format.\n",
+      "2023-05-08 12:15:43.304469: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:367] Ignored drop_control_dependency.\n",
+      "fully_quantize: 0, inference_type: 6, input_inference_type: INT8, output_inference_type: INT8\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "25832"
+       "11920"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "converter = tf.lite.TFLiteConverter.from_saved_model(\"model_v7/model_v7.tf\")\n",
+    "converter = tf.lite.TFLiteConverter.from_saved_model(\"tf_model\")\n",
     "converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
     "\n",
     "def representative_data_gen():\n",
     "    for i in range(repr_data.shape[0]):\n",
-    "        yield [np.expand_dims(repr_data[0], axis=0)]\n",
+    "        yield [np.expand_dims(repr_data[i], axis=0)]\n",
     "\n",
     "converter.representative_dataset = representative_data_gen\n",
     "converter.target_spec.supported_ops = [tf.lite.OpsSet.TFLITE_BUILTINS_INT8]\n",
-    "\n",
+    "converter.inference_input_type = tf.int8  # or tf.uint8\n",
+    "converter.inference_output_type = tf.int8  # or tf.uint8\n",
     "tflite_model = converter.convert()\n",
     "\n",
     "pathlib.Path(\"model.tflite\").write_bytes(tflite_model)\n"
