--- a/model/training.ipynb
+++ b/model/training.ipynb
@@ -20,6 +20,8 @@
     "from fvcore.nn import FlopCountAnalysis\n",
     "import warnings\n",
     "import torch.multiprocessing\n",
+    "from torchsummary import summary\n",
+    "\n",
     "\n",
     "torch.multiprocessing.set_sharing_strategy('file_system')\n",
     "warnings.filterwarnings(\"ignore\", category=UserWarning) "
@@ -172,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,20 +193,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Unsupported operator aten::sub_ encountered 1 time(s)\n",
-      "Unsupported operator aten::div_ encountered 1 time(s)\n",
-      "Unsupported operator aten::avg_pool1d encountered 1 time(s)\n",
-      "Unsupported operator aten::max_pool1d encountered 1 time(s)\n",
-      "Unsupported operator aten::softmax encountered 1 time(s)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -216,9 +207,74 @@
    ],
    "source": [
     "# print model stats\n",
-    "print(f\"FLOPS: {flops.total()}\")\n",
-    "\n",
-    "print(\"Number of params:\", sum(p.numel() for p in model.parameters()))"
+    "print(f\"FLOPS: {flops.total()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=================================================================\n",
+      "Layer (type:depth-idx)                   Param #\n",
+      "=================================================================\n",
+      "├─Sequential: 1-1                        --\n",
+      "|    └─Normalize: 2-1                    --\n",
+      "|    └─AvgPool1d: 2-2                    --\n",
+      "|    └─Dropout: 2-3                      --\n",
+      "|    └─Conv1d: 2-4                       76\n",
+      "|    └─ReLU: 2-5                         --\n",
+      "|    └─Dropout: 2-6                      --\n",
+      "|    └─MaxPool1d: 2-7                    --\n",
+      "|    └─Flatten: 2-8                      --\n",
+      "|    └─Linear: 2-9                       5,940\n",
+      "|    └─ReLU: 2-10                        --\n",
+      "|    └─Linear: 2-11                      84\n",
+      "|    └─Softmax: 2-12                     --\n",
+      "=================================================================\n",
+      "Total params: 6,100\n",
+      "Trainable params: 6,100\n",
+      "Non-trainable params: 0\n",
+      "=================================================================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "=================================================================\n",
+       "Layer (type:depth-idx)                   Param #\n",
+       "=================================================================\n",
+       "├─Sequential: 1-1                        --\n",
+       "|    └─Normalize: 2-1                    --\n",
+       "|    └─AvgPool1d: 2-2                    --\n",
+       "|    └─Dropout: 2-3                      --\n",
+       "|    └─Conv1d: 2-4                       76\n",
+       "|    └─ReLU: 2-5                         --\n",
+       "|    └─Dropout: 2-6                      --\n",
+       "|    └─MaxPool1d: 2-7                    --\n",
+       "|    └─Flatten: 2-8                      --\n",
+       "|    └─Linear: 2-9                       5,940\n",
+       "|    └─ReLU: 2-10                        --\n",
+       "|    └─Linear: 2-11                      84\n",
+       "|    └─Softmax: 2-12                     --\n",
+       "=================================================================\n",
+       "Total params: 6,100\n",
+       "Trainable params: 6,100\n",
+       "Non-trainable params: 0\n",
+       "================================================================="
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summary(model, input_size=(1, 6, 300))"
    ]
   },
   {
